Output result as iprof.